# pyjokes

./: .gitignore  .travis.yml  CONTRIBUTING.md  DESCRIPTION.rst  LICENCE.txt  MANIFEST.in  Makefile  README.md  README.rst  coverage.cfg  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml  pythonpackage.yml
docs/: api.md  index.md  install.md  society.md  story.md
pyjokes/: __init__.py  chuck.py  cmdparse.py  exc.py  geek.py  jokes.py  jokes_cn.py  jokes_cs.py  jokes_de.py  jokes_en.py  jokes_eng.py  jokes_es.py  jokes_eu.py  jokes_eus.py  jokes_fr.py  jokes_gl.py  jokes_hu.py  jokes_it.py  jokes_lt.py  jokes_pl.py  jokes_ru.py  jokes_se.py  jokes_spa.py  jokes_sv.py  jokes_tr.py  jokes_ua.py  pyjokes.py
pyjokes/cli/: __init__.py
pyjokescli/: pyjoke.py  pyjokes.py
scripts/: pyjoke  pyjokes  pyjoke~
tests/: test_cli_error.py  test_cmdparse.py  test_forever.py  test_get_joke.py  test_jode_encoding.py  test_joke_encoding.py  test_joke_length.py
